Bug 114180 - FILESAVE XLSX Many custom chart wall properties are not preserved when the spreadsheet is saved as XLSX
Summary: FILESAVE XLSX Many custom chart wall properties are not preserved when the sp...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: filter:xlsx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2017-11-30 15:29 UTC by Gabor Kelemen (Collabora)
Modified: 2019-12-20 13:15 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file made with Calc (82.07 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-11-30 15:29 UTC, Gabor Kelemen (Collabora)
Details
The example file saved by LO6 alpha (52.60 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2017-11-30 15:30 UTC, Gabor Kelemen (Collabora)
Details
The two files in Calc and Excel side by side (212.75 KB, image/png)
2017-11-30 15:31 UTC, Gabor Kelemen (Collabora)
Details
Calc and Excel side by side (488.68 KB, image/png)
2019-01-08 15:44 UTC, Balázs Varga
Details
Example file made and export by Calc. (22.46 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-01-08 15:46 UTC, Balázs Varga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2017-11-30 15:29:47 UTC
Created attachment 138142 [details]
Example file made with Calc

Many Chart Wall properties are not preserved when the spreadsheet is saved as XLSX, including Bitmap, Pattern and Hatch area fills and border line styles different from Continuous.

Steps to reproduce:
1. Create a new spreadsheet in LibreOffice Calc.
2. Create a simple chart (a column chart with default settings will do) based on any values.
3. Change the area fill of the chart wall to bitmap, pattern or hatch, or the Border line style to something different from Continuous.
4. Save the file as XLSX.
5. Reload the file.

Actual results:
The custom chart wall property will be lost.

Expected results:
The custom chart wall property should be preserved.
Comment 1 Gabor Kelemen (Collabora) 2017-11-30 15:30:25 UTC
Created attachment 138144 [details]
The example file saved by LO6 alpha
Comment 2 Gabor Kelemen (Collabora) 2017-11-30 15:31:59 UTC
Created attachment 138145 [details]
The two files in Calc and Excel side by side
Comment 3 Jacques Guilleron 2017-11-30 18:04:04 UTC
Hi Gabor,

Reproduced with
LO 6.0.0.0.beta1 Build ID: 97471ab4eb4db4c487195658631696bb3238656c
Threads CPU : 2; OS : Windows 6.1; UI Render : par défaut; 
Locale : en-US (fr_FR); Calc: CL
Comment 4 Commit Notification 2018-01-07 23:58:21 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=38df2698123d52461679b4bedadd693b23cb4794

support exporting of hatch for chart background, tdf#114180

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-02-07 23:38:59 UTC
A polite ping to Markus Mohrhard: is this bug fixed? if so, could you
please close it as RESOLVED FIXED ? Thanks
Comment 6 Markus Mohrhard 2018-02-07 23:49:16 UTC
This bug is far from being fixed. I just fixed the easiest case. All the remaining ones look like they might require a lot more work.
Comment 7 Bartosz 2018-03-02 15:05:05 UTC Comment hidden (deprecated, hidden, obsolete)
Comment 8 Xisco Faulí 2018-06-01 09:11:31 UTC
Dear Markus Mohrhard,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Resetting it to NEW.
Please assigned it back to yourself if you're still working on this.
Comment 9 Balázs Varga 2019-01-08 15:44:06 UTC
Created attachment 148136 [details]
Calc and Excel side by side

The two files in Calc and Excel side by side.
Now, It looks much better.
Comment 10 Balázs Varga 2019-01-08 15:46:05 UTC
Created attachment 148137 [details]
Example file made and export by Calc.