support exporting of hatch for chart background, tdf#114180

It seems that the hatch properties can not easily be exported. MSO
just knows some hard-coded patterns.

Change-Id: Ib1d0bbe503d77bfeb90faf90367bd5fdb477af64
Reviewed-on: https://gerrit.libreoffice.org/47156
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>