include/oox/export/chartexport.hxx
@@ -139,6 +139,7 @@ private:
     void exportFill( const css::uno::Reference< css::beans::XPropertySet >& xPropSet );
     void exportGradientFill( const css::uno::Reference< css::beans::XPropertySet >& xPropSet );
     void exportBitmapFill( const css::uno::Reference< css::beans::XPropertySet >& xPropSet );
+    void exportHatch(const css::uno::Reference<css::beans::XPropertySet>& xPropSet);
     void exportDataTable( );
 
     void exportAreaChart( const css::uno::Reference< css::chart2::XChartType >& xChartType );
